# agent-fn-registry-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
tests/: integration.rs
